# music_player_autosar

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.cache/clangd/index/: app_types.hpp.8A569FE849E172A0.idx  main.cpp.1EC73A880E8CFE33.idx  playback_manager.cpp.31A936323FB21BB0.idx  playlist.cpp.D9FE5B981C0BFAFB.idx  playlist.hpp.059A55553FCFD5F4.idx  song.hpp.A417CA92DB6DB2E2.idx  test_playback_state_machine.cpp.FEE987E9CFFCF2F0.idx  test_playlist_model.cpp.FB9F623DF526EEBC.idx
src/asw/swc_hmi_interface/include/: hmi_controller.hpp  hmi_observer.hpp
src/asw/swc_hmi_interface/include/include/: console_display.hpp  hmi_controller.hpp
src/asw/swc_hmi_interface/include/src/: console_display.cpp  hmi_controller.cpp
src/asw/swc_media_source_handler/include/: media_source_handler.hpp  media_source_strategy.hpp
src/asw/swc_media_source_handler/include/strategies/: bt_source.hpp  usb_source.hpp
src/asw/swc_media_source_handler/src/: bt_source_strategy.cpp  media_source_handler.cpp  media_source_strategy.cpp  usb_source.cpp
src/asw/swc_playback_manager/include/: i_playback_control.hpp  playback_state.hpp  playback_state_machine.hpp
src/asw/swc_playback_manager/include/states/: idle_state.hpp  pause_state.hpp  play_state.hpp
src/asw/swc_playback_manager/src/: idle_state.cpp  pause_state.cpp  play_state.cpp  playback_manager.cpp
src/asw/swc_playlist_model/include/: playlist.hpp  song.hpp
src/asw/swc_playlist_model/src/: playlist.cpp
src/common/include/: app_error_codes.hpp  app_types.hpp
test/: CMakeLists.txt
test/unit_tests/asw/: test_playback_state_machine.cpp  test_playlist_model.cpp
